// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Release repo list view  edit release repo manifest works correctly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
    style="width: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="manifestList listHeader"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          common.ID
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          pipelineSteps.serviceTab.manifestList.manifestType
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          pipelineSteps.serviceTab.manifestList.manifestStore
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          location
        </p>
        <span />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <div
            class="rowItem"
          >
            <section
              class="manifestList"
            >
              <div
                class="columnId"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--inline"
                  data-icon="service-kubernetes"
                >
                  <svg
                    height="20"
                    viewBox="0 0 14 14"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                      fill="#326ce5"
                    />
                    <path
                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                      fill="#fff"
                      stroke="#fff"
                      stroke-width="0.25"
                    />
                  </svg>
                </span>
                <span
                  class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--inline StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1; width: 150px;"
                >
                  sadsa
                </span>
              </div>
              <div>
                pipeline.releaseRepo
              </div>
              <div
                class="connectorNameField"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                  data-icon="service-github"
                >
                  <svg
                    height="18"
                    viewBox="0 0 14 14"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                      fill="#f42534"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target Text--targetClass"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                      style="--text-line-clamp: 1;"
                      tabindex="0"
                    >
                      &lt;+input&gt;
                    </p>
                  </span>
                </span>
              </div>
              <span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 200px;"
                >
                  <span
                    class="noWrap"
                  >
                    sdas
                  </span>
                </p>
              </span>
              <span>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="bp3-spinner bp3-button-spinner"
                    >
                      <div
                        class="bp3-spinner-animation"
                      >
                        <svg
                          height="20"
                          stroke-width="16.00"
                          viewBox="-3.00 -3.00 106.00 106.00"
                          width="20"
                        >
                          <path
                            class="bp3-spinner-track"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          />
                          <path
                            class="bp3-spinner-head"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                            pathLength="280"
                            stroke-dasharray="280 280"
                            stroke-dashoffset="210"
                          />
                        </svg>
                      </div>
                    </div>
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Edit"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 16"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-test-id="remove-release-repo"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 20"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </span>
            </section>
          </div>
        </section>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
    />
  </div>
</div>
`;

exports[`Release repo list view  initial render with manifests 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
    style="width: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="manifestList listHeader"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          common.ID
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          pipelineSteps.serviceTab.manifestList.manifestType
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          pipelineSteps.serviceTab.manifestList.manifestStore
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          location
        </p>
        <span />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <div
            class="rowItem"
          >
            <section
              class="manifestList"
            >
              <div
                class="columnId"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--inline"
                  data-icon="service-kubernetes"
                >
                  <svg
                    height="20"
                    viewBox="0 0 14 14"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                      fill="#326ce5"
                    />
                    <path
                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                      fill="#fff"
                      stroke="#fff"
                      stroke-width="0.25"
                    />
                  </svg>
                </span>
                <span
                  class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--inline StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1; width: 150px;"
                >
                  sadsa
                </span>
              </div>
              <div>
                pipeline.releaseRepo
              </div>
              <div
                class="connectorNameField"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                  data-icon="service-github"
                >
                  <svg
                    height="18"
                    viewBox="0 0 14 14"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                      fill="#f42534"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target Text--targetClass"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                      style="--text-line-clamp: 1;"
                      tabindex="0"
                    >
                      &lt;+input&gt;
                    </p>
                  </span>
                </span>
              </div>
              <span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 200px;"
                >
                  <span
                    class="noWrap"
                  >
                    sdas
                  </span>
                </p>
              </span>
              <span>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Edit"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 16"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-test-id="remove-release-repo"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 20"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </span>
            </section>
          </div>
        </section>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
    />
  </div>
</div>
`;

exports[`Release repo list view  remove manifest 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
    style="width: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="manifestList listHeader"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          common.ID
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          pipelineSteps.serviceTab.manifestList.manifestType
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          pipelineSteps.serviceTab.manifestList.manifestStore
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
        >
          location
        </p>
        <span />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section>
          <div
            class="rowItem"
          >
            <section
              class="manifestList"
            >
              <div
                class="columnId"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--inline"
                  data-icon="service-kubernetes"
                >
                  <svg
                    height="20"
                    viewBox="0 0 14 14"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                      fill="#326ce5"
                    />
                    <path
                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                      fill="#fff"
                      stroke="#fff"
                      stroke-width="0.25"
                    />
                  </svg>
                </span>
                <span
                  class="StyledProps--font Text--lineclamp StyledProps--main type StyledProps--inline StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1; width: 150px;"
                >
                  sadsa
                </span>
              </div>
              <div>
                pipeline.releaseRepo
              </div>
              <div
                class="connectorNameField"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-small"
                  data-icon="service-github"
                >
                  <svg
                    height="18"
                    viewBox="0 0 14 14"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                      fill="#f42534"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target Text--targetClass"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                      style="--text-line-clamp: 1;"
                      tabindex="0"
                    >
                      &lt;+input&gt;
                    </p>
                  </span>
                </span>
              </div>
              <span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 200px;"
                >
                  <span
                    class="noWrap"
                  >
                    sdas
                  </span>
                </p>
              </span>
              <span>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Edit"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 16"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-test-id="remove-release-repo"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="bp3-spinner bp3-button-spinner"
                    >
                      <div
                        class="bp3-spinner-animation"
                      >
                        <svg
                          height="20"
                          stroke-width="16.00"
                          viewBox="-3.00 -3.00 106.00 106.00"
                          width="20"
                        >
                          <path
                            class="bp3-spinner-track"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          />
                          <path
                            class="bp3-spinner-head"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                            pathLength="280"
                            stroke-dasharray="280 280"
                            stroke-dashoffset="210"
                          />
                        </svg>
                      </div>
                    </div>
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 20"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </span>
            </section>
          </div>
        </section>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
    />
  </div>
</div>
`;

exports[`Release repo list view  render with no manifests 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
    style="width: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <section />
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main addManifest Button--with-current-color Button--variation Button--variation-link Button--size Button--small"
        data-test-id="add-release-repo"
        id="add-release-repo"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Add Release Repo Manifest
        </span>
      </button>
    </div>
  </div>
</div>
`;
